changed font and sizing

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 
 <html>
 	<head>
-		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 		<title>Settling America</title>
 	</head>
-	<body style="font-family: 'Roboto', sans-serif;">
+	<body style="font-family: 'Bangers', cursive;">
 		<div id="root">
 		<script src="bundle.js"></script>
 		</div>
