added css loader and file, ignored build

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 		<title>Settling America</title>
 	</head>
-	<body style="font-family: 'Bangers', cursive;">
+	<body >
 		<div id="root">
 		<script src="bundle.js"></script>
 		</div>
