adjusted gamedata, fixed html page title

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
-		<title>Settling America</title>
+		<title>A Login Page</title>
 	</head>
 	<body>
 		<div id="root">
